--- a/frontend/src/components/base/footer/style.module.css
+++ b/frontend/src/components/base/footer/style.module.css
@@ -4,8 +4,13 @@ footer {
     height:140px;
 }
 footer p {
+    display: block;
+    position: relative;
     margin:0;
-    padding-bottom: 2px;
+    width: 100%;
+    height: 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 footer p .title{
     margin-left: 60px;
