--- a/frontend/src/components/base/navbar/style.module.css
+++ b/frontend/src/components/base/navbar/style.module.css
@@ -17,7 +17,7 @@
     z-index: 10;
 }
 .sidebar.active,
-.sidebar:hover {
+.sidebar.hover {
     width: 300px;
 }
 
@@ -33,7 +33,8 @@
     transition-duration: 2s;
     color:white;
 }
-.sidebar ul:hover {
+.sidebar.active ul.active,
+.sidebar.hover ul.hover {
     background: rgb(228, 129, 16);
     transition-property: background;
     transition-duration: 2s;
@@ -64,7 +65,8 @@
     transform: scaleY(0);
     transition: all 2s ease;
 }
-.sidebar ul:hover li {
+.sidebar.active ul.active li,
+.sidebar.hover ul.hover li {
     display: flex;
     height:20px;
     transform: scaleY(1);
@@ -89,8 +91,7 @@
         overflow: hidden;
         z-index: 10;
     }
-    .sidebar.active,
-    .sidebar:hover {
+    .sidebar.active {
         width:100%;
     }
 }
