--- a/frontend/src/components/base/navbar/style.module.css
+++ b/frontend/src/components/base/navbar/style.module.css
@@ -19,8 +19,43 @@
 .sidebar.active {
     width: 300px;
 }
-
-.sidebar div {
+.sidebar .items {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    overflow: hidden;
+    z-index: 8;
+    height:100%;
+    transition-duration:1s;
+}
+.sidebar .sidebar_button {
+    position: fixed;
+    display: flex;
+    height:20px;
+    width: 60px;
+    overflow:hidden;
+    background:#2c053f;
+    transition: 0.5s;
+    justify-content: center;
+    z-index:9;
+}
+.sidebar .downbutton {
+    bottom: 0px;
+    border-top: 1px solid black;
+}
+.sidebar .upbutton {
+    top: 0px;
+    border-bottom: 1px solid black;
+}
+.sidebar.active .sidebar_button {
+    width:300px;
+    transition: 0.5s;
+}
+.sidebar .sidebar_button .move{
+    height:20px;
+    width:20px;
+    display: flex;
+}
+.sidebar .items .itembox {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -28,30 +63,34 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 0px;
-    transition-property: background;
-    transition-duration: 2s;
+    height:60px;
+    transition-property: background,height;
+    transition-duration: 2s, 1s;
     color:white;
 }
-.sidebar.active div.active {
+.sidebar.active .items .itembox.clicked {
+    height:0px;
+}
+.sidebar.active .items .itembox.active {
     background: rgb(228, 129, 16);
     transition-property: background;
     transition-duration: 2s;
 }
-.sidebar div span {
+.sidebar .items .itembox .item {
     display: flex;
     width: 100%;
-    height: 60px;
+    height: 100%;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
 }
-.sidebar div span .menubar_icon {
+.sidebar .items .itembox .item .menubar_icon {
     display: flex;
-    width: 60px;
+    width: auto;
     height:60px;
-    padding: 10px;
+    padding:10px;
 }
-.sidebar div span h4 {
+.sidebar .items .itembox .item h4 {
     display: flex;
 }
 /* .sidebar ul li {
@@ -89,7 +128,13 @@
         overflow: hidden;
         z-index: 10;
     }
+    .sidebar .sidebar_button{
+        width:0px;
+    }
     .sidebar.active {
+        width:100%;
+    }
+    .sidebar.active .sidebar_button{
         width:100%;
     }
 }
