--- a/frontend/src/components/post/detailpost/style.module.css
+++ b/frontend/src/components/post/detailpost/style.module.css
@@ -1,18 +1,23 @@
 .detailpost {
     display: flex;
-    width: 80%;
+    width: 100%;
+    flex-direction: column;
 }
-.title {
+.post_title {
     font-weight: 900;
     font-size: 30px;
-    justify-items: flex-end;
+    border-bottom: 1px solid rgba(111, 0, 255, 0.253);
+    margin: 0px;
 }
-.create {
+.post_create {
     display: flex;
     font-weight: 100;
     font-size: 10px;
+    position: relative;
+    align-self: flex-end;
 }
-.content {
+.post_content {
     display: flex;
+    position: relative;
     border: 1px solid red;
 }
