--- a/frontend/src/components/post/mypost/showpost/style.module.css
+++ b/frontend/src/components/post/mypost/showpost/style.module.css
@@ -8,8 +8,6 @@
     font-weight: 800;
     font-size: 25px;
 }
-.showpost_div ul {
-}
 .showpost_div ul .content_title {
     list-style: none;
     font-weight: 500;
@@ -17,4 +15,12 @@
 .showpost_div ul .content_content {
     list-style: none;
     font-weight: 300;
+}
+.link_tag {
+    text-decoration: none;
+    color:black;
+}
+.link_tag {
+    text-decoration: none;
+    color:black;
 }
