--- a/frontend/src/components/home/style.module.css
+++ b/frontend/src/components/home/style.module.css
@@ -1,28 +1,68 @@
-.intro{
-    display: block;
-    position: relative;
+.loading {
+    display: flex;
+    position: fixed;
+    top:0;
+    left:0;
+    height:100%;
     width:100%;
-    margin-bottom: 30px;
+    z-index: 100;
+    background: black;
+    justify-content: center;
+    align-items: center;
 }
-.intro h1 {
-    display: block;
-    width: 100%;
+.loadingspan {
+    display: flex;
+    height:200px;
+    width: 200px;
+    border: 4px solid white;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
 }
-.intro p{
-    display: block;
-    text-align: justify;
+.circleline {
+    display: flex;
+    height:209.5px;
+    width:209.5px;
+    justify-content: center;
+}
+.circle {
+    display:flex;
+    height:15px;
+    width:15px;
+    background:white;
+    border-radius: 50%;
 }
 .items_wrapper {
     display: flex;
-    position: relative;
+    position: fixed;
+    left:0px;
+    padding:60px;
     width:100%;
     flex-direction: row;
     justify-content: space-around;
+    height:100vh;
+    background:white;
+
 }
+.intro{
+    display: flex;
+    position: fixed;
+    width:80%;
+    flex-direction: column;
+}
+.intro h1 {
+    display: flex;
+    width: 100%;
+}
+.intro p{
+    display: flex;
+    text-align: justify;
+}
+
 .items_wrapper .item {
     display: flex;
-    width: 48%;
-    min-height:500px;
+    width: 80%;
+    /* min-height:500px; */
     border: 1px solid rgb(101, 53, 233);
     border-radius: 30px;
     flex-direction: column;
