--- a/frontend/src/components/home/style.module.css
+++ b/frontend/src/components/home/style.module.css
@@ -6,47 +6,112 @@
     height:100%;
     width:100%;
     z-index: 100;
-    background: black;
     justify-content: center;
     align-items: center;
 }
+.backspan {
+    display: flex;
+    position:absolute;
+    height:100%;
+    width: 100%;
+    background: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+.frontspan {
+    display: flex;
+    position: relative;
+    width: 40%;
+    height:90%;
+    background: rgb(68, 66, 66);
+}
+
 .loadingspan {
     display: flex;
-    height:200px;
-    width: 200px;
-    border: 4px solid white;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
 }
+
+.numbering {
+    /* 플랙스에 absolute하면 정가운대로 옴
+    이유는 relative처럼 다른 엘리먼트에 방해를 안받기때문*/
+    display: flex;
+    position:absolute;
+    color:white;
+    font-size: 100px;
+    font-weight: 600;
+}
 .circleline {
     display: flex;
+    position:absolute;
     height:209.5px;
     width:209.5px;
     justify-content: center;
 }
 .circle {
     display:flex;
-    height:15px;
-    width:15px;
-    background:white;
+    position:absolute;
     border-radius: 50%;
 }
+.svgtag {
+    display: flex;
+    z-index: 140;
+    width: 500px;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+}
+path {
+    display: flex;
+    position: absolute;
+    transform-origin: center;
+    /* animation: grotate 1s ease 0s infinite normal forwards; */
+}
+
 .items_wrapper {
     display: flex;
     position: fixed;
-    left:0px;
-    padding:60px;
     width:100%;
+    left:0;
+    top:0;
+    padding: 60px 60px 40px 60px;
     flex-direction: row;
     justify-content: space-around;
     height:100vh;
     background:white;
-
+}
+.homedeco {
+    display: flex;
+    height:100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background-clip: text;
+    background-image: url(./img/background.jpg);
+    color:transparent;
+    flex-direction: column;
+}
+.homedeco h1{
+    display: flex;
+    font-size: 25vh;
+    font-family: sans-serif;
+    font-weight: 700;
+    text-align: center;
+    margin:0px;
+}
+.upDown {
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    height:80px;
+    width: 160px;
+    cursor: pointer;
 }
 .intro{
     display: flex;
-    position: fixed;
     width:80%;
     flex-direction: column;
 }
@@ -116,6 +181,17 @@
     animation-direction: normal;
     animation-iteration-count: infinite;
 }
+
+
+
+@keyframes grotate{
+    0% {
+        transform: rotate(40deg);
+    }
+    100% {
+        transform: rotate(400deg);
+    }
+}
 @keyframes slidein {
     from {
         margin-left: 0%;
@@ -124,6 +200,17 @@
         margin-left: -100%;
     }
 
+}
+@keyframes bounce {
+    0%, 20%, 40%, 60%, 80% {
+        transform: translateY(10%);
+    }
+    10%, 30%, 50%, 70% {
+        transform: translateY(-10%);
+    }
+    100% {
+        transform:translateY(-100%);
+    }
 }
 @media screen and (max-width:768px) {
     .items_wrapper {
