--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,9 +1,15 @@
 .container {
   display: block;
-  padding: 40px 60px 40px 60px;
-  min-height:calc(100% - 140px);
+  min-height:100vh;
 }
-
+.sidebar_icon {
+  position: fixed;
+  width: 40px;
+  height: auto;
+  top:0;
+  right:0;
+  z-index: 15;
+}
 /* .App-logo {
   height: 40vmin;
   pointer-events: none;
