--- a/frontend/src/components/home/style.module.css
+++ b/frontend/src/components/home/style.module.css
@@ -70,22 +70,60 @@ path {
     transform-origin: center;
     /* animation: grotate 1s ease 0s infinite normal forwards; */
 }
-
-.items_wrapper {
+.contentnumbers {
     display: flex;
     position: fixed;
+    right:10px;
+    top:10%;
+    z-index: 160;
+    flex-direction: column;
+}
+.contentnumbers span {
+    display: flex;
+    cursor: pointer;
+}
+.contentnumbers span.active {
+    font-weight: 700;
+    font-size: 50px;
+}
+.appcontainer {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    overflow-y:auto;
+    scroll-behavior: smooth;
+    height:100vh;
+}
+.appcontainer::-webkit-scrollbar {
+    width:5px;
+}
+.appcontainer::-webkit-scrollbar-thumb {
+width: 5px;
+background-color:thistle;
+border-radius: 10%;
+}
+.appcontainer::-webkit-scrollbar-track {
+background:none;
+}
+.appcontainer::-webkit-scrollbar-button {
+width: 0px;
+height: 0px;
+}
+.items_wrapper {
+    display: flex;
+    position: relative;
     width:100%;
     left:0;
     top:0;
-    padding: 60px 60px 40px 60px;
-    flex-direction: row;
+    padding: 40px 60px 40px 60px;
     justify-content: space-around;
-    height:100vh;
     background:white;
+    
 }
+
 .homedeco {
     display: flex;
-    height:100%;
+    height:100vh;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -93,10 +131,10 @@ path {
     background-image: url(./img/background.jpg);
     color:transparent;
     flex-direction: column;
+
 }
 .homedeco h1{
     display: flex;
-    font-size: 25vh;
     font-family: sans-serif;
     font-weight: 700;
     text-align: center;
@@ -122,16 +160,18 @@ path {
 .intro p{
     display: flex;
     text-align: justify;
+    width:100%;
 }
 
 .items_wrapper .item {
     display: flex;
     width: 80%;
-    /* min-height:500px; */
+    min-height:300px;
     border: 1px solid rgb(101, 53, 233);
     border-radius: 30px;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 .items_wrapper .item .title {
     display: flex;
@@ -213,14 +253,20 @@ path {
     }
 }
 @media screen and (max-width:768px) {
-    .items_wrapper {
-        flex-direction: column;
+    .upDown {
+        display:none;
     }
     .items_wrapper .item {
         width: 100%;
         margin-bottom: 10px;
     }
+    .intro {
+        width:100%;
+    }
     .posttitle {
         font-size: 30px;
+    }
+    .contentnumbers {
+        display: none;
     }
 }
