--- a/frontend/src/components/base/header/style.module.css
+++ b/frontend/src/components/base/header/style.module.css
@@ -1,12 +1,11 @@
 .top_navbar{
     display: flex;
-    position: fixed;
+    position: relative;
     flex-direction: row;
     width: 100%;
     height:40px;
     background: rgba(70, 33, 172, 0.938);
     justify-content: center;
-    z-index: 9;
 }
 .top_navbar div {
     display: block;
