--- a/frontend/src/components/base/navbar/style.module.css
+++ b/frontend/src/components/base/navbar/style.module.css
@@ -1,35 +1,37 @@
 .sidebar_icon {
-    position: fixed;
+    position:absolute;
     width: 40px;
-    height: auto;
-    top:0;
-    right:0;
-    z-index: 15;
-
+    height: 40px;
+    right:-40px;
 }
 
 .sidebar {
-    position: fixed;
+    display: flex;
+    position: sticky;
+    bottom:0px;
     width: 60px;
-    height: 100%;
+    height:fit-content;
+    min-height: 150vh;
+    margin:0px;
     background: #320748;
     transition: 0.5s;
-    overflow: hidden;
-    z-index: 10;
+    
 }
 .sidebar.active {
     width: 300px;
 }
 .sidebar .items {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    overflow: hidden;
-    z-index: 8;
-    height:100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    width:300px;
+    height:fit-content;
+    overflow-x: hidden;
     transition-duration:1s;
 }
-.sidebar .sidebar_button {
-    position: fixed;
+/* .sidebar .sidebar_button {
+    position: relative;
     display: flex;
     height:20px;
     width: 60px;
@@ -37,16 +39,15 @@
     background:#2c053f;
     transition: 0.5s;
     justify-content: center;
-    z-index:9;
 }
 .sidebar .downbutton {
-    bottom: 0px;
+    
     border-top: 1px solid black;
 }
 .sidebar .upbutton {
-    top: 0px;
+    
     border-bottom: 1px solid black;
-}
+} */
 .sidebar.active .sidebar_button {
     width:300px;
     transition: 0.5s;
@@ -60,10 +61,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 0px;
     height:60px;
     transition-property: background,height;
     transition-duration: 2s, 1s;
@@ -80,7 +79,7 @@
 .sidebar .items .itembox .item {
     display: flex;
     width: 100%;
-    height: 100%;
+    height:fit-content;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
@@ -93,6 +92,7 @@
 }
 .sidebar .items .itembox .item h4 {
     display: flex;
+    margin:0px;
 }
 /* .sidebar ul li {
     display: flex;
@@ -127,7 +127,6 @@
         background: #320748;
         transition: 0.5s;
         overflow: hidden;
-        z-index: 10;
     }
     .sidebar .sidebar_button{
         width:0px;
