--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -3,25 +3,25 @@
   position: relative;
   flex-direction: row;
   width: 100%;
+  height:100vh;
+  transition: 0.5s;
 }
-.container::-webkit-scrollbar {
-  width:5px;
-}
-.container::-webkit-scrollbar-thumb {
-width: 5px;
-background-color:thistle;
-border-radius: 10%;
-}
-.container::-webkit-scrollbar-track {
-background:none;
-}
-.container::-webkit-scrollbar-button {
-width: 0px;
-height: 0px;
-}
+
 .wrapper {
   flex-direction: column;
   width:100%;
+}
+.sidebar_icon {
+  width: 40px;
+  height: 40px;
+  top:0px;
+  position: fixed;
+  z-index: 40;
+}
+@media screen and (max-width:768px) {
+  .sidebar_icon {
+    display: none;
+  }
 }
 /* .App-logo {
   height: 40vmin;
