--- a/frontend/src/components/base/header/style.module.css
+++ b/frontend/src/components/base/header/style.module.css
@@ -1,11 +1,15 @@
+
 .top_navbar{
-    display: flex;
+    display: none;
     position: relative;
     flex-direction: row;
     width: 100%;
-    height:40px;
+    height:0;
     background: rgba(70, 33, 172, 0.938);
     justify-content: center;
+}
+.top_navbar.visible {
+    display: flex;
 }
 .top_navbar div {
     display: block;
@@ -63,4 +67,8 @@
     transition: all 0.5s ease;
     width:100%;
 }
-
+@media screen and (max-width:768px) {
+    .top_navbar.top_navbar.visible{
+        display: none;
+    }
+}
