--- a/frontend/src/components/home/style.module.css
+++ b/frontend/src/components/home/style.module.css
@@ -78,6 +78,9 @@ path {
     flex-direction: column;
     scroll-behavior: smooth;
     width: 100%;
+    height:100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .items_wrapper {
