--- a/frontend/src/components/base/header/style.module.css
+++ b/frontend/src/components/base/header/style.module.css
@@ -1,15 +1,18 @@
 
 .top_navbar{
     display: none;
-    position: relative;
+    position: fixed;
     flex-direction: row;
     width: 100%;
     height:0;
     background: rgba(70, 33, 172, 0.938);
     justify-content: center;
+    z-index: 20;
+    transition-duration: 0.5s;
 }
 .top_navbar.visible {
-    display: flex;
+    height: 40px;
+    transition-duration: 0.5s;
 }
 .top_navbar div {
     display: block;
