--- a/frontend/src/components/base/navbar/style.module.css
+++ b/frontend/src/components/base/navbar/style.module.css
@@ -1,14 +1,14 @@
 .sidebar {
     display: flex;
     position: sticky;
-    bottom:0px;
+    top:0px;
     width: 0px;
-    height: 100%;
+    height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
     margin:0px;
     background: #320748;
     transition: 0.5s;
-    
 }
 .sidebar.visible {
     width: 60px;
