--- a/frontend/src/components/base/fastAccess/style.module.css
+++ b/frontend/src/components/base/fastAccess/style.module.css
@@ -1,21 +1,36 @@
 .contentnumbers {
     display: flex;
     position: fixed;
-    right:30px;
-    top:10%;
+    top:40%;
+    right:10px;
     z-index: 10;
+    width: 0px;
     flex-direction: column;
+    border-radius: 10%;
+    transition-duration: 0.5s;
+}
+.contentnumbers.active{
+    width:50px;
+    border:1px solid black;
+}
+.contentnumbers img {
+    position: absolute;
+    left:-40px;
+    height:40px;
+    width:40px;
 }
 .contentnumbers span {
     display: flex;
     cursor: pointer;
-    width:20px;
+    width: 0px;
+    overflow:hidden;
+    transition-duration: 0.5s;
 }
 .contentnumbers span.active {
     font-weight: 700;
-    font-size: 50px;
+    width:50px;
 }
 .upDown {
-    width:20px;
+    width: 50px;
     height: 15px;
 }
